# podCI

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  deny.toml  mkdocs.yml
.github/workflows/: ci.paused  ci.yml  packages.yml  pages.paused  pages.yml  release.paused
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/gc/: Cargo.toml
crates/gc/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/namespace/: Cargo.toml
crates/namespace/src/: lib.rs
crates/podman/: Cargo.toml
crates/podman/src/: lib.rs
crates/templates/: Cargo.toml
crates/templates/src/: lib.rs  tests.rs
crates/templates/templates/containerfiles/: Containerfile.cpp-debian  Containerfile.kde-mixed-debian  Containerfile.rust-alpine  Containerfile.rust-debian
docs/: index.md  licensing.md  requirements.txt  roadmap.md
docs/assets/stylesheets/: theme.css
docs/concepts/: architecture.md  caching.md  execution-model.md  namespaces.md  reproducibility.md
docs/config/: index.md  jobs-steps.md  profiles.md  reference.md
docs/development/: docs-site.md  index.md  packaging.md  releasing.md  supply-chain.md
docs/install/: arch.md  deb.md  index.md  rpm.md
docs/operations/: caching.md  logging.md  manifests.md  prune.md  troubleshooting.md
docs/quickstart/: cpp.md  drop-in.md  index.md  kde-mixed.md  rust.md
docs/reference/: cli.md  logging.md  manifest.md
docs/rustdoc/: index.html  index.md
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/rpm/: podci.spec
scripts/: build_docs.sh  gen_lockfile.sh  gen_rustdoc_into_docs.sh  make_source_tarball.sh  release.sh  release_gate.sh
templates/cpp/: template.toml
templates/cpp/files/: podci.toml
templates/generic/: template.toml
templates/generic/files/: podci.toml
templates/kde-mixed/: template.toml
templates/kde-mixed/files/: podci.toml
templates/rust-glibc/: template.toml
templates/rust-glibc/files/: podci.toml
templates/rust-glibc/files/src/: lib.rs
templates/rust-musl/: template.toml
templates/rust-musl/files/: Cargo.toml  podci.toml
