# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2026 Richard Majewski - Varanid Works

[package]
name = "podci-templates"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
etcetera.workspace = true
flate2.workspace = true
tar.workspace = true
toml.workspace = true
serde.workspace = true
tokio.workspace = true
